--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
 
 # Fallback image and color
 image:               /hydejack/assets/img/nap.jpg
-color:               '#4f86aa'
+color:               '#65799b'
 
 # The font used for headings. Expects a string that is a valid CSS font-family value.
 font_heading:        "'Roboto Slab', Helvetica, Arial, sans-serif"
