add new post on wlb habits

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: David Justo # Your name
 email: david.justo.1996@gmail.com # your email shown in the footer
 url: https://davidmrdavid.github.io # this is your site's root address.
 description: > # this means to ignore newlines until "show_excerpts:"
-  A blog, not just about ASTs
+  You peek into the the abstraction, it stares right back.
 favicon: "./favicon.ico" # set the favicon of the site 
 
 show_excerpts: false # set to true to show excerpts on the homepage
